fin taller angular

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mynewapp</title>
+  <title>Taller Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg" id="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><strong>TV Series</strong></a>
+      </div>
+    </nav>
+  </div>
+  <br/>
+  <br/>
   <app-root></app-root>
+  <app-course></app-course>
 </body>
 </html>
